# rui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  TWITTER.md  design-review.md  tink-design.md
examples/: animation_demo.rs  core_bench.rs  counter.rs  dashboard.rs  glm_chat.rs  hello_world.rs
src/: lib.rs  prelude.rs
src/core/: animation.rs  app.rs  color.rs  color_palette.rs  entity.rs  event.rs  geometry.rs  geometry_ops.rs  mod.rs  style.rs  view.rs  window.rs
src/elements/: button.rs  div.rs  element.rs  image.rs  input.rs  list.rs  mod.rs  progress.rs  scroll_view.rs  spinner.rs  table.rs  text.rs  text_input.rs
src/hooks/: mod.rs  use_mouse.rs  use_paste.rs  use_window_focus.rs
src/platform/: mod.rs
src/platform/mac/: app.rs  mod.rs  window.rs
src/renderer/: mod.rs  primitives.rs  scene.rs
src/renderer/metal/: mod.rs  renderer.rs  shaders.rs  text_renderer.rs
